--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,5 +82,5 @@
     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["./src"]
+  "include": ["src"]
 }
