--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "io-ts example",
   "main": "dist/index.js",
   "scripts": {
+    "build": "npm run clean && tsc",
+    "lint": "eslint",
+    "lint:fix": "npm run lint --fix",
+    "type-check": "tsc --noEmit",
+    "prepublish": "npm run build",
+    "postinstall": "npm run build",
+    "clean": "rimraf dist",
     "test": "jest"
   },
   "repository": {
@@ -28,7 +35,31 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "babel-jest": "^26.1.0",
-    "jest": "^26.1.0"
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
+  },
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run type-check && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": "npm run lint:fix",
+    "src/**/*.{json, md}": "prettier --write"
   }
 }
