--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
   "lint-staged": {
     "src/**/*.ts": "npm run lint:fix",
     "src/**/*.{json, md}": "prettier --write"
+  },
+  "dependencies": {
+    "fp-ts": "^2.7.1",
+    "io-ts": "^2.2.9"
   }
 }
