--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-jest": "^26.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -63,6 +64,7 @@
     "src/**/*.{json, md}": "prettier --write"
   },
   "dependencies": {
+    "@babel/cli": "^7.10.5",
     "fp-ts": "^2.7.1",
     "io-ts": "^2.2.9"
   }
