[REF] Refactor to relative imports

--- a/package.json
+++ b/package.json
@@ -2,18 +2,10 @@
   "name": "io-ts-example",
   "version": "1.0.0",
   "description": "io-ts example",
-  "main": "dist/index.js",
   "scripts": {
-    "build": "npm run clean && npm run type && npm run compile",
-    "compile": "babel src/ --out-dir dist --extensions \".ts\"",
-    "type": "tsc --declaration --emitDeclarationOnly",
     "lint": "eslint",
     "lint:fix": "npm run lint --fix",
-    "type-check": "tsc --noEmit",
-    "prepublish": "npm run build",
-    "postinstall": "npm run build",
-    "clean": "rimraf dist",
-    "test": "jest"
+    "type-check": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -32,24 +24,17 @@
   },
   "homepage": "https://github.com/phatnguyenuit/io-ts-example#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
-    "babel-jest": "^26.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
